Adding URL to README

--- a/README
+++ b/README
@@ -1,8 +1,10 @@
+Screendoor
+
+Available at:  http://github.com/write2david/screendoor
 
 
+May be good to put something like this in your .screenrc
 
-
-May be good to put something like this in .screenrc
 
 
 defscrollback 10000
