--- a/README
+++ b/README
@@ -36,9 +36,4 @@ For example:
 
 TIPS
 
-May be good to put something like this in your .screenrc
-
-defscrollback 10000
-# Window tabs, second to last line
-# caption always "%{kW}%?%-Lw%?%{bw}%n*%f %t%?(%u)%?%{kW}%?%+Lw%? %= %{= Wk}%110`%109`%122`%111`"
-caption always "%{= .w}%-Lw%20L>%{=b .c}%n%f %t%{-}%+Lw %-020= %D %d %M - %c"
+Clone this git repo, check it out, and then softlink your .bash_login, .screenrc, etc to the checked-out repo (working directory).
