--- a/TODO
+++ b/TODO
@@ -1,11 +1,15 @@
 TODO
 
-1)  Add the "Entering GNU Screen, press any key to cancel."  (from porch.sh)
+1)  WinSCP logs in, activating .bashrc  (not .bash_profile) and line sourcing screendoor causes an exit status of 0 which prevents WinSCP login.
+
+2)  Remove the call to zsh in the screendoor.sh file.
+
+3)  Add the "Entering GNU Screen, press any key to cancel."  (from porch.sh)
 	And similar for "Leaving GNU Screen."
 	Comment them both out, and add a line "Uncomment to enable message."
 
-2)  Remove need for "Cornerstone" window.
+4)  Remove need for "Cornerstone" window.
 
-3)  Shorter window names (how?) so they line up better at the bottom.
+5)  Shorter window names (how?) so they line up better at the bottom.
 
-4)  Copy/paste e-mail exchange into porch-note.txt
+6)  Copy/paste e-mail exchange into porch-note.txt
