--- a/TODO
+++ b/TODO
@@ -1,8 +1,26 @@
 TODO
 
+
 1)  Remove the call to zsh in the screendoor.sh file.
 	If removing the call, then if you add a line to .zshrc for it to call screendoor (. ~/screendoor.sh) then it will land you in a bash prompt since screendoor is written in bash.
 	Don't know how to avoid this, except with the current call WITHIN screendoor to zsh.  And if going to do that, then you can't have .zshrc call screendoor, since it will then loop.
+
+
+Note the following from the /etc/screenrc file:
+# shell:  Default process started in screen's windows.
+# Makes it possible to use a different shell inside screen
+# than is set as the default login shell.
+# If begins with a '-' character, the shell will be started as a login shell.
+# shell                 zsh
+# shell                 bash
+# shell                 ksh
+#        shell -$SHELL
+
+
+This can be overwritten in the .screenrc
+
+Add to README a note about this?
+
 
 
 2)  Add the "Entering GNU Screen, press any key to cancel."  (from porch.sh)
@@ -12,7 +30,9 @@ TODO
 	Comment them both out, and add a line "Uncomment to enable message."
 
 
-3)  Remove need for "Cornerstone" window, or make it optional and disabled (commented-out) by default.
+3)  Possibly: Remove need for "Cornerstone" window, or make it optional and disabled (commented-out) by default.
+	Cornerstone is mostly needed to ensure multiuser?  If so, this this line of screenrc, which can be overwritten:
+	multiuser off      (or on)
 
 
 4)  Shorter window names (how?) so they line up better at the bottom.
@@ -25,7 +45,3 @@ TODO
 	Seems that the messages are sent to /dev/ttyS0.
 	cat /dev/ttyS0   --  this will catch them and display them
 	so maybe the "shutdown" command needs to be "shutdown && cat /dev/ttyS0"
-
-
-7) Backspace produces ^? at virtual console and over SSH.
-	Fixed with commit 99defec74eb7602e55dac23d52e55a19e73d1be5  ??
