--- a/TODO
+++ b/TODO
@@ -1,41 +1,21 @@
 TODO
 
 
-1)  Remove the call to zsh in the screendoor.sh file.
-	If removing the call, then if you add a line to .zshrc for it to call screendoor (. ~/screendoor.sh) then it will land you in a bash prompt since screendoor is written in bash.
-	Don't know how to avoid this, except with the current call WITHIN screendoor to zsh.  And if going to do that, then you can't have .zshrc call screendoor, since it will then loop.
+1)  Does screendoor work fine when using it in a non-root account?
+
+2)  With multiuser on, can non-root accounts connect to a screendoor session owned by root?
 
 
-Note the following from the /etc/screenrc file:
-# shell:  Default process started in screen's windows.
-# Makes it possible to use a different shell inside screen
-# than is set as the default login shell.
-# If begins with a '-' character, the shell will be started as a login shell.
-# shell                 zsh
-# shell                 bash
-# shell                 ksh
-#        shell -$SHELL
-
-
-This can be overwritten in the .screenrc
-
-Add to README a note about this?
-
-
-
-2)  Add the "Entering GNU Screen, press any key to cancel."  (from porch.sh)
+3)  Add the "Entering GNU Screen, press any key to cancel."  (from porch.sh)
 	And, "You are now in GNU Screen (via screendoor)."
 	And, if we detect that this is a login shell (SSH, virtual console (F1, F2, etc): "Press Ctrl-Up to view any login-related messages (such as SSH port-forwarding issues, etc)."  # Issue is that auto-running screen at login clears the screen and then you miss any login-related messages.  Perhaps see if removing the "clear" command from screendoor.sh fixes the problem.  Can't test this over SSH since "clear" does not affect with Putty the same way it does in-person.
 	And similar for "Leaving GNU Screen."
 	Comment them both out, and add a line "Uncomment to enable message."
 
 
-3)  Possibly: Remove need for "Cornerstone" window, or make it optional and disabled (commented-out) by default.
+4)  Possibly: Remove need for "Cornerstone" window, or make it optional and disabled (commented-out) by default.
 	Cornerstone is mostly needed to ensure multiuser?  If so, this this line of screenrc, which can be overwritten:
 	multiuser off      (or on)
-
-
-4)  Shorter window names (how?) so they line up better at the bottom.
 
 
 5)  Copy/paste e-mail exchange into porch-note.txt
@@ -45,3 +25,8 @@ Add to README a note about this?
 	Seems that the messages are sent to /dev/ttyS0.
 	cat /dev/ttyS0   --  this will catch them and display them
 	so maybe the "shutdown" command needs to be "shutdown && cat /dev/ttyS0"
+
+
+	WAIT, this is actually normal behavior, I believe.
+		The shutdown messages are visible when you are sitting at the terminal.
+		But not when using GNU screen remotely over SSH.
