Adding old .bashrc and .bash_login that...
...were the original screendoor.sh

--- a/README
+++ b/README
@@ -3,6 +3,7 @@ WELCOME TO SCREENDOOR
 Website:  http://tech.thedesignhut.net/gnu-screen
 
 Latest version available for download at:  http://github.com/write2david/screendoor/blob/master/screendoor.sh
+	Or for easy wget'ing:  www.tinyurl.com/get-screendoor
 
 Git: http://github.com/write2david/screendoor
 
